[package]
    name = "gitlab-nag"
    version = "0.2.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    reqwest = { version = "0.11.17" }
    anyhow = "1.0.71"
    clap = { version = "4.3.8", features = ["derive", "env"] }
    gitlab = { version = "0.1511.0", features = ["reqwest"] }
    secrecy = "0.8.0"
    serde_json = "1.0.96"
    slack-hook = "0.8.0"
