[package]
    name = "gitlab-nag"
    version = "0.2.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    reqwest = { version = "0.11.18" }
    anyhow = "1.0.71"
    clap = { version = "4.3.19", features = ["derive", "env"] }
    gitlab = { version = "0.1602.1", features = ["reqwest"] }
    secrecy = "0.8.0"
    serde_json = "1.0.104"
    chrono = "0.4.24"
    slack-morphism = { version = "1.10.0", features = ["hyper"] }
    tokio = { version = "1.27.0", features = ["full"] }
