[package]
    name = "gitlab-nag"
    version = "0.2.0"
    edition = "2021"

[dependencies]
    reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls-webpki-roots"]}
    anyhow = "1.0.71"
    clap = { version = "4.4.6", features = ["derive", "env"] }
    gitlab = { version = "0.1602.1", features = ["reqwest"] }
    secrecy = "0.8.0"
    serde_json = "1.0.104"
    chrono = "0.4.24"
    slack-morphism = { version = "1.10.0", features = ["hyper"] }
    tokio = { version = "1.27.0", features = ["full"] }
    tracing = { version = "0.1.37", features = ["release_max_level_debug"] }
    tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
    tracing-journald = "0.3.0"
